<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_passport"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tando.mba01.Passport"
    android:orientation="vertical"
    android:background="#FFF">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    app:srcCompat="@drawable/csusb_logo"
                    android:onClick="backHome"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Why complete your MBA Passport?"
                    android:textStyle="bold"
                    android:textColor="#000"
                    android:textSize="20dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:text="@string/passport1"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:text="@string/passport2"
                    android:onClick="learnGoals"
                    android:layout_marginBottom="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:layout_marginBottom="5dp"
                    android:text="@string/passport3"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Fall 2016 Events:"
                    android:textStyle="bold"
                    android:textColor="#000"
                    android:textSize="20dp"
                    android:layout_marginBottom="5dp"/>
                <!-- CBPA will be link to MBA focus area -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:layout_marginBottom="5dp"
                    android:text="@string/passport4"
                    android:onClick="CBPA"
                 />
                <!-- MBA will be link to GPA calculator -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:layout_marginBottom="5dp"
                    android:text="@string/passport5"
                    android:onClick="MBA"
                    />

            </LinearLayout>

            <!-- Social Media Icons -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/facebookicon"
                    android:paddingRight="5dp"
                    android:id="@+id/Facebook"
                    android:onClick="fbFunc"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/instagramicon"
                    android:paddingRight="5dp"
                    android:id="@+id/Instagram"
                    android:onClick="igFunc"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/linkedin"
                    android:paddingRight="5dp"
                    android:id="@+id/Linkedin"
                    android:onClick="lnFunc"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/twittericon"
                    android:paddingRight="5dp"
                    android:id="@+id/Twitter"
                    android:onClick="twFunc"/>
            </LinearLayout>

         </LinearLayout>
     </ScrollView>


</LinearLayout>
